# control-for-robotics

./: .gitignore  README.md
classic/: README.md  classic_control_integrator_model.ipynb  classic_control_unicycle_model.ipynb
data_driven/: hypothesis_validation.py  readme.md  requirements.txt
data_driven/controller/: __init__.py  deepc.py  ilqr_learned.py  policy_learning.py
data_driven/data_collection/: __init__.py  dataset.py  excitation_signals.py  trajectory_generation.py
data_driven/system_id/: __init__.py  linear_id.py  neural_dynamics.py  subspace_id.py
nl2controller/: .env.example  README.md  __init__.py  pyproject.toml  requirements.txt
nl2controller/data/: robot_vocabulary.json
nl2controller/examples/: demo.py  simple_example.py
nl2controller/src/: __init__.py  config.py  extended_pipeline.py  pipeline.py
nl2controller/src/grounding/: __init__.py  grounding_filter.py  vocabulary.py
nl2controller/src/lifting/: __init__.py  engine.py  gemini_engine.py  patterns.py
nl2controller/src/simulation/: __init__.py  continuous_sim.py  robot_sim.py  visualizer.py
nl2controller/src/synthesis/: __init__.py  controller.py  hybrid_controller.py  synthesizer.py  transition_system.py
nl2controller/src/translation/: __init__.py  gemini_translator.py  translator.py
nl2controller/tests/: test_grounding.py  test_integration.py  test_lifting.py  test_simulation.py  test_synthesis.py  test_translation.py
rl/: README.md  main.py
symbolic/: README.md  visualize_post.py
symbolic/docs/: symbolic_control_report.tex
symbolic/symbolic_control/: __init__.py
